# OrdersWebReactDjango

./: .gitignore  Makefile  db.sqlite3  manage.py  pyproject.toml  settings.py  setup.cfg
frontend/: babel.config.json  package-lock.json  package.json  webpack.config.js
frontend/src/components/: App.js
frontend/tamplates/frontend/: index.html
orders_app/: admin.py  urls.py  views.py
orders_app/migrations/: 0001_initial.py  0002_stock.py  0003_rename_client_clients_rename_stock_stocks.py  0004_units.py  0005_carriers.py  0006_alter_carriers_description_alter_clients_description_and_more.py  0007_trucks.py  0008_drivers.py  0009_truckcapacities_trucktypes_and_more.py  0010_rename_carrier_id_drivers_carrier_and_more.py  0011_products.py  0012_rename_carriers_carrier_rename_clients_client_and_more.py  0013_remove_product_report_unit_and_more.py  0014_order_orderitem_order_products_and_more.py  0015_remove_product_base_unit_and_more.py  0016_productweight_alter_product_product_units_and_more.py  0017_rename_client_customer_and_more.py  0018_rename_unit_appunit_alter_appunit_table.py  0019_stock_address_stock_driving_scheme.py  0020_rename_unit_productweight_product_unit_and_more.py
orders_app/models/: __init__.py  carriers.py  clients.py  drivers.py  order_items.py  orders.py  product_units.py  products.py  stocks.py  truck_capacities.py  truck_types.py  trucks.py  units.py
orders_app/templates/orders_app/: index.html
orders_web_project/: asgi.py  settings.py  urls.py  wsgi.py
