[project]
name = "orderswebreactdjango"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-extensions>=4.1",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "make>=0.1.6.post2",
    "mypy>=1.17.1",
]
prod = [
    "uvicorn>=0.35.0",
]

[tool.isort]
profile = "black"

[tool.black]
exclude = '''.env'''

[tool.coverage.run]
omit = [
    "__init__.py",
    "tests/*",
]
